--- a/CSS/register.css
+++ b/CSS/register.css
@@ -281,6 +281,25 @@ a:hover {
 
 .container {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Added height for the container */
+}
+
+.box {
+  height: 500px;
+  width: 450px;
+  background-color: #1a1a1a;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  margin: 20px;
+}
+
+.wokeup {
+  display: flex;
   justify-content: flex-start;
   align-items: center;
   height: 100vh;
